--- a/server/templates/article_detail.html
+++ b/server/templates/article_detail.html
@@ -82,12 +82,138 @@
                 <p>请回复有价值的信息，无意义的评论将很快被删除，账号将被禁止发言。</p>
             </div>
 
+            <div class="comment-list-box">
+                <div class="common_title_box comment_title_box">
+                    <span class="common_title_icon"></span>
+                    <div class="common_box_title">评论区</div>
+                </div>
+                <div class="comment-list">
+                    <ul>
+                        <li class="comment-list-item clearfix">
+                            <div class="comment-list-item-avatar">
+                                <img src="{{ url_for('static',filename='images/default_avatar.e19c4635.png', _external=True) }}">
+                            </div>
+                            <div class="comment-list-item-detail">
+
+                                <div class="comment_left_box">
+                                        <span class="username">kerrygao</span>
+                                        <span class="comment_time"> · 4分钟前</span>
+                                </div>
+                                <div class="comment_right_box">
+                                    <a class="item-user-reply">回复</a>
+                                </div>
+                                <div class="comment_content_box">
+                                    <p class="comment_content">
+                                        pauline_Lund 交流，入群交流烦请备注：姓名+公司+职位。36氪出海同时也欢迎更多精英伙伴提供出海类优质原创稿件，邮箱 weipeilin@36kr.com，邮件备注：投稿-标题-作者姓名，感谢！
+                                    </p>
+                                    <div class="comment_reply_box">
+                                        <ul>
+                                            <li>
+                                                <div class="reply_left_box">
+                                                    <span class="username">kerrygao</span>
+                                                    <span class="comment_time"> · 4分钟前</span>
+                                                </div>
+                                                <div class="reply_left_right">
+                                                    <a class="item-user-reply">回复</a>
+                                                </div>
+                                                <p class="reply_content">
+                                                    36氪出海同时也欢迎更多精英伙伴提供出海
+                                                </p>
+                                            </li>
+                                            <li>
+                                                <div class="reply_left_box">
+                                                    <span class="username">kerrygao</span>
+                                                    <span class="comment_time"> · 4分钟前</span>
+                                                </div>
+                                                <div class="reply_left_right">
+                                                    <a class="item-user-reply">回复</a>
+                                                </div>
+                                                <p class="reply_content">
+                                                    36氪出海同时也欢迎更多精英伙伴提供出海
+                                                </p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="comment-list-item clearfix">
+                            <div class="comment-list-item-avatar">
+                                <img src="{{ url_for('static',filename='images/default_avatar.e19c4635.png', _external=True) }}">
+                            </div>
+                            <div class="comment-list-item-detail">
+
+                                <div class="comment_left_box">
+                                        <span class="username">kerrygao</span>
+                                        <span class="comment_time"> · 4分钟前</span>
+                                </div>
+                                <div class="comment_right_box">
+                                    <a class="item-user-reply">回复</a>
+                                </div>
+                                <div class="comment_content_box">
+                                    <p class="comment_content">
+                                        pauline_Lund 交流，入群交流烦请备注：姓名+公司+职位。36氪出海同时也欢迎更多精英伙伴提供出海类优质原创稿件，邮箱 weipeilin@36kr.com，邮件备注：投稿-标题-作者姓名，感谢！
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+
 
 
 
         </div>
         <div class="article_side_bar">
+            <div class="article_side_bar_item ">
+                <div class="author_info_box">
+                    <div class="author_info">
+                        <div class="author_info_header">
+                            <img class="author_avatar" src="https://krplus-pic.b0.upaiyun.com/avatar/201904/04023113/aeam58vcu6sl1jdc!120">
+                            <div class="author_text">
+                                <a href="#" class="author_name">魏佩琳@36氪出海</a>
+                                <span class="author-role">新锐作者</span>
+                            </div>
 
+                        </div>
+                        <p class="author_description">关注出海 交流可加微信：13292050986</p>
+                        <span class="sider_bar_title_icon">发表文章19篇</span>
+                        <div class="inner-wrapper">
+                            <div class="section">
+                                <span class="sider_bar_title_icon" style="color: #262626;">最近内容</span>
+                                <div class="author-itemslist">
+                                    <div class="item-wrapper-box">
+                                        <a class="item-title" href="/p/5198528">出海日报 | 腾讯投资的音乐流媒体Gaana月活跃用户超过1亿；Grab投资新加坡物流公司Ninja Van</a>
+                                        <div class="item-related-info">
+                                            <span class="time item">1小时前</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="author-itemslist">
+                                    <div class="item-wrapper-box">
+                                        <a class="item-title" href="/p/5198528">出海日报 | 腾讯投资的音乐流媒体Gaana月活跃用户超过1亿；Grab投资新加坡物流公司Ninja Van</a>
+                                        <div class="item-related-info">
+                                            <span class="time item">1小时前</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="author-itemslist">
+                                    <div class="item-wrapper-box">
+                                        <a class="item-title" href="/p/5198528">出海日报 | 腾讯投资的音乐流媒体Gaana月活跃用户超过1亿；Grab投资新加坡物流公司Ninja Van</a>
+                                        <div class="item-related-info">
+                                            <span class="time item">1小时前</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#" class="footer-a">阅读更多内容，狠戳这里</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
