--- a/server/static/css/common.css
+++ b/server/static/css/common.css
@@ -1693,6 +1693,144 @@ a, a:hover {
     line-height: 40px;
     margin: 0 -16px -17px;
 }
+
+.modal{
+    background: #fff;
+    /*box-shadow: 0 5px 15px 0 rgba(0,0,0,.15);*/
+    font-size: 16px;
+    /*margin: 100px auto;*/
+    /*overflow: hidden;*/
+    /*text-align: left;*/
+    /*user-select: none;*/
+    /*width: 460px;*/
+    /*height: 150px;*/
+}
+
+.layui-layer-page,.layui-layer-content{
+    border-radius: 4px !important;
+}
+
+.modal_header{
+    background: url(../images/login_bg.png) no-repeat 50%;
+    background-size: 100% 100%;
+    height: 130px;
+    position: relative;
+}
+
+.modal_header img{
+    height: 39px;
+    margin-left: 198px;
+    margin-top: 50px;
+    width: 64px;
+}
+
+.modal .form-group{
+    width: 320px;
+    margin: auto;
+}
+
+.modal .form-group .form-group-box{
+    border-bottom: 1px solid rgba(0,0,0,.08);
+    height: 55px;
+    line-height: 55px;
+    position: relative;
+}
+
+.modal .form-group .form-group-box.error{
+    border-bottom: 1px solid #f95355;
+}
+
+.modal .form-group .form-group-box .form-input{
+    border: none;
+    color: #262626;
+    font-size: 16px;
+    height: 53px;
+    width: 100%;
+}
+
+
+.modal .error-area{
+    color: #f95355;
+    font-size: 14px;
+    padding: 5px 0;
+    display: none;
+}
+
+
+.send-msg-code{
+    cursor: pointer;
+    float: right;
+    position: relative;
+    line-height: 53px;
+    color: #4285f4;
+    user-select: none;
+}
+
+.send-msg-code.disabled{
+    cursor: default;
+    color: rgba(66,133,244,.5);
+}
+
+.password-eyes-icon{
+    cursor: pointer;
+    float: right;
+    height: 20px;
+    position: relative;
+    top: 17px;
+    width: 20px;
+    background: url(../images/password_hiden.png) no-repeat 50%;
+    background-size: cover;
+}
+
+.password-eyes-icon.show{
+    background: url(../images/password_show.png) no-repeat 50%;
+    background-size: cover;
+}
+
+.form-group-text{
+    font-size: 14px;
+    padding-top: 10px;
+    text-align: right;
+}
+
+.form-group-text a{
+    color: #4285f4;
+    cursor: pointer;
+}
+
+.form-group-text .forget{
+    color: #a7a7a7;
+}
+
+.modal .modal_body{
+    padding-bottom: 20px;
+}
+
+.modal .form-group .modal-button{
+    background: #4285f4;
+    cursor: pointer;
+    border: none;
+    border-radius: 2px;
+    color: #fff;
+    font-size: 16px;
+    height: 46px;
+    line-height: 46px;
+    margin-top: 40px;
+    text-align: center;
+    width: 320px;
+}
+
+.modal_close{
+    background: url(../images/close_modal.png) no-repeat 50%;
+    background-size: 100% 100%;
+    cursor: pointer;
+    height: 20px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 20px;
+}
+
 /*background: #4285f4;*/
     /*border-radius: 2px 2px 0 0;*/
     /*height: 4px;*/
