添加 用户导航菜单

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -60,10 +60,21 @@
         </div>
         <div id="box-right">
             <div class="box-right-header">
-                <div class="kr-header">
-                    <a class="kr-header-btn login"><span>登录</span></a>
-                    <a class="line">|</a>
-                    <a class="kr-header-btn resgister"><span>注册</span></a>
+{#                <div class="kr-header">#}
+{#                    <a class="kr-header-btn login"><span>登录</span></a>#}
+{#                    <a class="line">|</a>#}
+{#                    <a class="kr-header-btn resgister"><span>注册</span></a>#}
+{#                </div>#}
+                <div class="user-center-box">
+                    <div class="user-login">
+                        <img src="http://127.0.0.1:5001/static/images/default_avatar.e19c4635.png" alt="">
+                        <ul class="user-menu">
+                            <li><a href="#" class="nickname">kerrygao</a></li>
+                            <li><a href="#">账号设置</a></li>
+                            <li><a href="#">我的收藏</a></li>
+                            <li><a href="#">退出登录</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <ul class="business-line">
                    <li><a href="#" target="_blank" rel="noopener noreferrer">开氪</a></li>
