--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -60,11 +60,11 @@
         </div>
         <div id="box-right">
             <div class="box-right-header">
-{#                <div class="kr-header">#}
-{#                    <a class="kr-header-btn login"><span>登录</span></a>#}
-{#                    <a class="line">|</a>#}
-{#                    <a class="kr-header-btn resgister"><span>注册</span></a>#}
-{#                </div>#}
+                <div class="kr-header">
+                    <a class="kr-header-btn login"><span>登录</span></a>
+                    <a class="line">|</a>
+                    <a class="kr-header-btn resgister"><span>注册</span></a>
+                </div>
                 <div class="user-center-box">
                     <div class="user-login">
                         <img src="http://127.0.0.1:5001/static/images/default_avatar.e19c4635.png" alt="">
